# weather-parser

./: .env.example  .gitignore  .pre-commit-config.yaml  Makefile  README.md  build.py  pyproject.toml  requirements.txt
src/: api_client.py  cli.py  config_loader.py  main.py  weather_display.py
src/core/: api_client.py  data_parser.py  weather_service.py
src/database/: db_manager.py  models.py
src/database/sql/: init.sql
src/gui/: constants.py  history_manager.py  main_window.py  resource_manager.py
src/gui/resources/styles/: main.qss
src/notifications/: engine.py  evaluator.py
src/utils/: pressure_converter.py
