[project]
name = "weather-parser-notiefer"
version = "0.1.0"
description = "Smart Weather-Parser with notification system"
readme = "README.md"
authors = [
    {name = "Milana Melnikova", email = "melnikova.milana2020@mail.ru"},
]
keywords = ["weather", "parser", "notifications", "openweathermap"]

requires-python = ">=3.12"
dependencies = []

[dependency-groups]
dev = [
    "ruff>=0.14.7",
]

[tool.ruff]
line-length = 120

[tool.ruff.lint]
preview = true
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # Pyflakes
    "I",   # isort
    "UP",  # pyupgrade
    "S",   # flake8-bandit (security)
    "B",   # flake8-bugbear (лучшие практики)
    "C4",  # flake8-comprehensions (генераторы)
    "SIM", # flake8-simplify (упрощение)
]
